--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "@storybook/addons": "^5.0.10",
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^8.0.7",
     "@testing-library/react-hooks": "^8.0.1",
     "babel-loader": "8.1.0",
+    "dom-testing-library": "^5.0.0",
     "prop-types": "^15.8.1",
     "react-test-renderer": "^16.9.0",
     "sass": "^1.53.0"
